--- a/src/templates/main/chart-table/chart-table.html
+++ b/src/templates/main/chart-table/chart-table.html
@@ -11,7 +11,7 @@
         <div class="collapse" id="chartTableMenuCollapse-1">
             <ul class="chart-table__subgroup">
                 <li class="chart-table__subgroup_item">
-                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа-1</a>
+                    <a href="/" class="chart-table__subgroup_item_link active">Подгруппа-1</a>
                 </li>
                 <li class="chart-table__subgroup_item">
                     <a href="/" class="chart-table__subgroup_item_link">Подгруппа-2</a>
@@ -199,7 +199,7 @@
         <div class="collapse" id="chartTableMenuCollapse-2">
             <ul class="chart-table__subgroup">
                 <li class="chart-table__subgroup_item">
-                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа-1</a>
+                    <a href="/" class="chart-table__subgroup_item_link active">Подгруппа-1</a>
                 </li>
                 <li class="chart-table__subgroup_item">
                     <a href="/" class="chart-table__subgroup_item_link">Подгруппа-2</a>
@@ -387,7 +387,7 @@
         <div class="collapse" id="chartTableMenuCollapse-3">
             <ul class="chart-table__subgroup">
                 <li class="chart-table__subgroup_item">
-                    <a href="/" class="chart-table__subgroup_item_link">Подгруппа-1</a>
+                    <a href="/" class="chart-table__subgroup_item_link active">Подгруппа-1</a>
                 </li>
                 <li class="chart-table__subgroup_item">
                     <a href="/" class="chart-table__subgroup_item_link">Подгруппа-2</a>
