--- a/src/templates/main/chart-table/chart-table.scss
+++ b/src/templates/main/chart-table/chart-table.scss
@@ -52,9 +52,22 @@
 }
 
 .chart-table__subgroup {
-	overflow-x: auto;
-	margin-top: 15px;
-	padding: 0 20px;
+	//overflow-x: auto;
+	position: relative;
+	display: flex;
+	align-items: center;
+	padding-right: 50px;
+	border-bottom: 1px solid #dadada;
+	&:after {
+		content: '';
+		position: absolute;
+		top: 0;
+		right: 50px;
+		width: 62px;
+		height: 100%;
+		background-image: linear-gradient(to right, rgba(255, 255, 255, 0.33) 0%, #ffffff 100%);
+	}
+	//padding: 0 20px;
 	.mCSB_container {
 		display: flex;
 		align-items: center;
@@ -63,16 +76,35 @@
 
 .chart-table__subgroup_item {
 	margin-right: 40px;
+	padding-right: 40px;
 	&:last-child {
 		margin-right: 0;
 	}
 }
 
 .chart-table__subgroup_item_link {
+	position: relative;
+	display: block;
+	padding: 15px 0;
 	color: $black;
 	transition: .3s;
+	&:before {
+		content: '';
+		position: absolute;
+		bottom: -1px;
+		left: 0;
+		width: 100%;
+		height: 2px;
+		background-color: transparent;
+	}
 	&:hover {
 		color: $main;
+	}
+	&.active {
+		color: $main;
+		&:before {
+			background-color: $main;
+		}
 	}
 }
 
