Добавив переключення між блочним і табличним видом чарта.

--- a/src/templates/main/chart-table/chart-table.html
+++ b/src/templates/main/chart-table/chart-table.html
@@ -1,4 +1,4 @@
-<div class="chart-table">
+<div class="chart-table chart-toggle">
 
     <div class="chart-table__block">
         <div class="chart-table__block_menu collapsed" data-toggle="collapse" data-target="#chartTableMenuCollapse-1" aria-expanded="false" aria-controls="chartTableMenuCollapse-1">
