--- a/src/templates/main/chart/chart.html
+++ b/src/templates/main/chart/chart.html
@@ -1,4 +1,4 @@
-<div class="chart">
+<div class="chart chart-toggle">
     <div class="chart__block chart__block-1">
         <div class="chart__block_label">Услуги <span>(56 котировок)</span></div>
         <div class="chart__block_grid chart__block_grid-1">
