--- a/src/templates/sidebar/sidebar.html
+++ b/src/templates/sidebar/sidebar.html
@@ -2,14 +2,14 @@
     <div class="sidebar__group">
         <div class="sidebar__title">Вид котировок:</div>
         <div class="sidebar__toggle">
-            <a href="#" class="sidebar__toggle_link active">
+            <a href=".chart" class="sidebar__toggle_link active">
                 <svg class="sidebar__toggle_link_icon" xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24">
                     <g fill-rule="evenodd">
                         <path d="M.19 0h6v8h-6zM.19 15.996h5.023v8H.19zM6.16 16h5.625v8H6.16zM12.89 16.004h6.803v8H12.89zM20.787 16h3.402v8h-3.402zM7.19 0h10v8h-10zM.19 9.109h11.645V15H.19zM12.893 9.109H24.19V15H12.893zM18.166 0h6.023v8h-6.023z"/>
                     </g>
                 </svg>
             </a>
-            <a href="#" class="sidebar__toggle_link">
+            <a href=".chart-table" class="sidebar__toggle_link">
                 <svg class="sidebar__toggle_link_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25">
                     <g fill-rule="evenodd">
                         <path d="M0 .066h24v3.716H0zM0 20.33h24v3.717H0zM0 5.158h24v3.716H0zM0 10.198h24v3.716H0zM0 15.202h24v3.716H0z"/>
