--- a/src/templates/main/main.html
+++ b/src/templates/main/main.html
@@ -1,10 +1,20 @@
 <main class="main">
 
+    <div class="zoom">
+        <div class="zoom__btn">+</div>
+        <input type="range" class="custom-range" id="zoom">
+        <div class="zoom__btn">-</div>
+    </div>
+
     //= chart/chart.html
 
     //= chart-table/chart-table.html
 
     //= info/info.html
+
+    <div class="main__advertising">
+        <img src="../../assets/img/sidebar-advertising.jpg" alt="">
+    </div>
 
     <div class="main__placing">
         <a href="/" class="main__placing_btn">Размещение в котировке</a>
