--- a/src/assets/sass/customs/_titles.scss
+++ b/src/assets/sass/customs/_titles.scss
@@ -24,3 +24,20 @@
 	text-transform: uppercase;
 	color: $main;
 }
+
+
+
+@include media-breakpoint-down(sm) {
+	.h1 {
+		font-size: 20px;
+	}
+	.info {
+		top: -10px;
+		right: -15px;
+		transform: none;
+		width: 16px;
+		height: 16px;
+		border: 1px solid $main;
+		font-size: 10px;
+	}
+}
