--- a/src/assets/sass/customs/customs.scss
+++ b/src/assets/sass/customs/customs.scss
@@ -7,6 +7,8 @@
 @import "popover";
 @import "slider";
 @import "custom-scrollbar";
+@import "tooltip";
+@import "chart-hover";
 
 .content {
 	display: grid;
@@ -22,7 +24,6 @@
 	justify-content: center;
 	margin: 60px 0 80px;
 	width: 100%;
-	height: 180px;
 	cursor: pointer;
 }
 
@@ -42,4 +43,22 @@
 	border-style: solid;
 	border-width: 10px 6px 0 6px;
 	border-color: #ffc0c7 transparent transparent transparent;
+}
+
+
+
+@include media-breakpoint-down(lg) {
+	.content {
+		grid-template-columns: minmax(0, 200px) minmax(0, 1fr);
+		grid-gap: 16px;
+	}
+}
+@include media-breakpoint-down(md) {
+	.content {
+		grid-template-columns: minmax(0, 1fr);
+		grid-gap: 30px;
+	}
+	.banner {
+		margin: 30px 0;
+	}
 }
