--- a/src/templates/main/chart/chart.scss
+++ b/src/templates/main/chart/chart.scss
@@ -46,6 +46,9 @@
 	font-weight: bold;
 	color: $white;
 	text-align: center;
+	&:hover {
+		border: 5px solid #c7e62f;
+	}
 }
 
 .chart__block_grid-1 {
@@ -425,4 +428,84 @@
 	align-items: center;
 	justify-content: center;
 	text-transform: uppercase;
+}
+
+
+
+@include media-breakpoint-down(sm) {
+	.chart {
+		grid-template-columns: minmax(0, 1fr);
+		grid-gap: 8px;
+		grid-template-areas:
+				'block-1'
+				'block-2'
+				'block-3'
+	;
+	}
+}
+
+@include media-breakpoint-down(xs) {
+	.chart__block_grid_item_content {
+		.ratio-up,
+		.ratio-down {
+			position: absolute;
+		}
+		&.fz-1 {
+			.chart__block_grid_item_name {
+				font-size: 24px;
+			}
+			.chart__block_grid_item_ratio {
+				font-size: 18px;
+			}
+			.ratio-up,
+			.ratio-down {
+				right: -20px;
+				bottom: 8px;
+			}
+		}
+		&.fz-2 {
+			.chart__block_grid_item_name {
+				font-size: 18px;
+			}
+			.chart__block_grid_item_ratio {
+				font-size: 14px;
+			}
+			.ratio-up {
+				right: -10px;
+				border-width: 0 4px 8px 4px;
+			}
+		}
+		&.fz-3 {
+			.chart__block_grid_item_name {
+				font-size: 14px;
+			}
+			.chart__block_grid_item_ratio {
+				font-size: 12px;
+			}
+			.ratio-up {
+				right: -10px;
+				border-width: 0 4px 8px 4px;
+			}
+			.ratio-down {
+				right: -10px;
+				border-width: 8px 4px 0 4px;
+			}
+		}
+		&.fz-4 {
+			.chart__block_grid_item_name {
+				font-size: 12px;
+			}
+			.chart__block_grid_item_ratio {
+				font-size: 10px;
+			}
+			.ratio-up {
+				right: -10px;
+				border-width: 0 3px 6px 3px;
+			}
+			.ratio-down {
+				right: -7px;
+				border-width: 6px 3px 0 3px;
+			}
+		}
+	}
 }
