--- a/src/templates/main/main.scss
+++ b/src/templates/main/main.scss
@@ -3,5 +3,80 @@
 @import "info/info";
 
 .main {
-	padding-top: 50px;
+	//padding-top: 50px;
+}
+
+.main__advertising {
+	display: none;
+	img {
+		width: 100%;
+	}
+}
+
+.zoom {
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	height: 50px;
+	.custom-range {
+		width: 200px;
+		height: 5px;
+		padding: 0 10px;
+	}
+}
+
+.zoom__btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 24px;
+	height: 24px;
+	border: 1px solid $main;
+	background-color: $white;
+	color: $main;
+	cursor: pointer;
+}
+
+
+
+@include media-breakpoint-down(md) {
+	.main__advertising {
+		display: block;
+	}
+	.main__placing {
+		display: none;
+	}
+}
+@include media-breakpoint-down(sm) {
+	.main__info {
+		flex-wrap: wrap;
+		padding: 1em 0;
+	}
+	.main__info_left {
+		width: 100%;
+	}
+	.main__info_right {
+		width: 100%;
+		margin-left: 0;
+	}
+	.main__info_left_block {
+		margin-right: 20px;
+	}
+	.main__info_left_block_item {
+		&:before {
+			width: 30px;
+			background-position: center right;
+		}
+	}
+	.main__info_label {
+		font-size: 12px;
+		&:nth-child(2) {
+			padding: 0 0 15px;
+		}
+	}
+}
+@include media-breakpoint-down(xs) {
+	.main__placing_btn {
+		width: 100%;
+	}
 }
