--- a/src/templates/sidebar/sidebar.scss
+++ b/src/templates/sidebar/sidebar.scss
@@ -41,3 +41,36 @@
 		width: 100%;
 	}
 }
+
+.sidebar__placing {
+	display: none;
+}
+
+
+
+@include media-breakpoint-down(lg) {
+	.sidebar__title {
+		font-size: 12px;
+	}
+	.dropdown-item {
+		font-size: 12px;
+	}
+}
+@include media-breakpoint-down(md) {
+	.sidebar__advertising {
+		display: none;
+	}
+	.sidebar__placing {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	.sidebar__title {
+		font-size: 14px;
+	}
+	.dropdown-item {
+		font-size: 14px;
+	}
+}
+@include media-breakpoint-down(sm) {}
+@include media-breakpoint-down(xs) {}
