Добавив пусте модальне вікно.

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -6,6 +6,7 @@ Table of contents
 ## Customs
 ## Sidebar
 ## Main
+## Modal
 *******************/
 
 
@@ -28,3 +29,7 @@ Table of contents
 /* ## Main
 ====================*/
 @import "../../templates/main/main";
+
+/* ## Modal
+====================*/
+@import "../../templates/modal/modal";
