--- a/src/templates/main/main.html
+++ b/src/templates/main/main.html
@@ -22,8 +22,8 @@
         <img src="../../assets/img/sidebar-advertising.jpg" alt="">
     </div>
 
-    <div class="main__placing">
-        <a href="/" class="main__placing_btn">Размещение в котировке</a>
+    <div class="main__placing" data-toggle="modal" data-target="#modalPlacing">
+        <button class="main__placing_btn">Размещение в котировке</button>
     </div>
     <!-- /.main__placing -->
 
