--- a/src/templates/main/main.html
+++ b/src/templates/main/main.html
@@ -22,8 +22,10 @@
         <img src="../../assets/img/sidebar-advertising.jpg" alt="">
     </div>
 
-    <div class="main__placing" data-toggle="modal" data-target="#modalPlacing">
-        <button class="main__placing_btn">Размещение в котировке</button>
+    <div class="main__placing">
+        <button class="btn main__placing_btn" data-toggle="modal" data-target="#modalPlacing">
+            Размещение в котировке
+        </button>
     </div>
     <!-- /.main__placing -->
 
