--- a/src/templates/modal/modal.html
+++ b/src/templates/modal/modal.html
@@ -1,19 +1,48 @@
 <!-- Modal Placing -->
-<div class="modal fade" id="modalPlacing" tabindex="-1" role="dialog" aria-labelledby="modalPlacingLabel" aria-hidden="true">
+<div aria-hidden="true" aria-labelledby="modalPlacingLabel" class="modal fade" id="modalPlacing" role="dialog"
+     tabindex="-1">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalPlacingLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <h5 class="modal-title" id="modalPlacingLabel">Размещение в котировке</h5>
+                <div class="modal-step">Шаг 1 из 3</div>
+                <button aria-label="Close" class="close" data-dismiss="modal" type="button"></button>
             </div>
             <div class="modal-body">
-                ...
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <form class="needs-validation" novalidate>
+                    <div class="form-group">
+                        <label class="label">
+                            <input class="input form-control" required type="text" placeholder="Уже есть аккаунт? Укажите ваш логин">
+                        </label>
+                        <div class="valid-tooltip">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="label">
+                            <input class="input form-control" required type="text" placeholder="Название франшизы">
+                        </label>
+                        <div class="valid-tooltip">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="dropdown">
+                            <button class="dropdown-toggle" type="button" id="formCategory" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Объем инвестиций
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="formCategory">
+                                <a class="dropdown-item" href="#" data-target="#blockSize">Объем инвестиций</a>
+                                <a class="dropdown-item" href="#" data-target="#blockSize">Объем инвестиций</a>
+                                <a class="dropdown-item" href="#" data-target="#blockSize">Объем инвестиций</a>
+                                <a class="dropdown-item" href="#" data-target="#blockSize">Объем инвестиций</a>
+                                <a class="dropdown-item" href="#" data-target="#blockSize">Объем инвестиций</a>
+                                <a class="dropdown-item" href="#" data-target="#blockSize">Объем инвестиций</a>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn w-100" type="submit">Далее</button>
+                </form>
             </div>
         </div>
     </div>
