--- a/src/templates/modal/modal.html
+++ b/src/templates/modal/modal.html
@@ -206,6 +206,24 @@
                             </div>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="agree-1" required>
+                            <label class="custom-control-label" for="agree-1">
+                                Обязуюсь предоставлять достоверную финансовую и юридическую информацию.
+                            </label>
+                            <div class="invalid-feedback">Example invalid feedback text</div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="agree-2" required>
+                            <label class="custom-control-label" for="agree-2">
+                                Подтверждаю согласие на обработку персональных данных
+                            </label>
+                            <div class="invalid-feedback">Example invalid feedback text</div>
+                        </div>
+                    </div>
                     <button class="btn w-100" type="submit">Отправить форму</button>
                 </form>
             </div>
