--- a/src/assets/sass/customs/_form.scss
+++ b/src/assets/sass/customs/_form.scss
@@ -20,3 +20,39 @@ form {
 	border: 1px solid #999999;
 	color: #555555;
 }
+
+.custom-checkbox {
+	padding-left: 2.5rem;
+	.custom-control-label {
+		&:before {
+			left: -2.5rem;
+			width: 34px;
+			height: 28px;
+			border-radius: 0;
+			border: none;
+			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='28' viewBox='0 0 28 28'%3E%3Cdefs%3E%3CclipPath id='abc6a'%3E%3Cpath fill='%23fff' d='M0 0h28v28H0z'/%3E%3C/clipPath%3E%3C/defs%3E%3Cg%3E%3Cg%3E%3Cpath fill='none' stroke='%23000' stroke-miterlimit='50' stroke-width='2' d='M0 0v0h28v28H0v0z' clip-path='url(&quot;%23abc6a&quot;)'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+			background-repeat: no-repeat;
+		}
+		&:after {
+			left: -2.5rem;
+			width: 34px;
+			height: 28px;
+		}
+	}
+}
+
+.custom-control-input:checked ~ .custom-control-label::before {
+	border-color: $black;
+	background-color: $white;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='34' height='28' viewBox='0 0 34 28'%3E%3Cdefs%3E%3CclipPath id='kea9a'%3E%3Cpath fill='%23fff' d='M0 0h28v28H0z'/%3E%3C/clipPath%3E%3C/defs%3E%3Cg%3E%3Cg%3E%3Cpath fill='none' stroke='%23000' stroke-miterlimit='50' stroke-width='2' d='M0 0v0h28v28H0v0z' clip-path='url(&quot;%23kea9a&quot;)'/%3E%3C/g%3E%3Cg%3E%3Cpath fill='%23fff' d='M24 0h10v16H24z'/%3E%3C/g%3E%3Cg%3E%3Cpath fill='%231d91ff' d='M30.477 2.958a.5.5 0 0 1 .768.634l-.058.07-17.703 17.874a.5.5 0 0 1-.634.063l-.07-.057-7.979-7.762a.5.5 0 0 1 .628-.774l.07.057 7.622 7.417z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+	background-repeat: no-repeat;
+	color: $black;
+}
+
+.custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
+	background: none;
+}
+
+.custom-control-input:focus ~ .custom-control-label::before {
+	box-shadow: none;
+}
