--- a/src/templates/modal/modal.scss
+++ b/src/templates/modal/modal.scss
@@ -1,4 +1,5 @@
 .modal {
+	background-color: rgba($black, .75);
 	label {
 		margin-bottom: 0;
 	}
@@ -6,6 +7,7 @@
 
 .modal-content {
 	border-radius: 0;
+	border: none;
 }
 
 .modal-header {
