--- a/src/templates/modal/modal.html
+++ b/src/templates/modal/modal.html
@@ -208,7 +208,7 @@
                     </div>
                     <div class="form-group">
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="agree-1" required>
+                            <input type="checkbox" class="custom-control-input" id="agree-1" checked required>
                             <label class="custom-control-label" for="agree-1">
                                 Обязуюсь предоставлять достоверную финансовую и юридическую информацию.
                             </label>
@@ -217,7 +217,7 @@
                     </div>
                     <div class="form-group">
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="agree-2" required>
+                            <input type="checkbox" class="custom-control-input" id="agree-2" checked required>
                             <label class="custom-control-label" for="agree-2">
                                 Подтверждаю согласие на обработку персональных данных
                             </label>
