--- a/src/templates/modal/modal.scss
+++ b/src/templates/modal/modal.scss
@@ -80,3 +80,12 @@
 		max-width: 560px;
 	}
 }
+
+@include media-breakpoint-down(sm) {
+	.modal-header {
+		padding: 1rem;
+	}
+	.modal-body {
+		padding: 2rem 1rem;
+	}
+}
