--- a/src/templates/sidebar/sidebar.html
+++ b/src/templates/sidebar/sidebar.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="sidebar__placing">
-        <button class="main__placing_btn" data-toggle="modal" data-target="#modalPlacing">Размещение в котировке</button>
+        <button class="btn main__placing_btn" data-toggle="modal" data-target="#modalPlacing">Размещение в котировке</button>
     </div>
 </div>
 <!-- /.sidebar -->
